adding my layout

--- a/views/error.html
+++ b/views/error.html
@@ -1,8 +1,5 @@
-<html>
-  <head>
-    <title>!Error!</title>
-  </head>
-  <body>
-   THIS IS AN ERROR PAGE.
-  </body>
-</html>
+{% extends './layout.html' %}
+{% block content %}
+Error Page!
+{% endblock %}
+
