--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,7 @@
   <body>
     <div class='container'>
     <hl>{{ title }}</hl>
-    <ul class='nav nav-pills' style='margin: 10px 0'>
+    <ul class='nav nav-tabs' style='margin: 10px 0'>
         <li class='nav-item'>
           <a class='nav-link active' href='/'>Home</a>
         </li>
