--- a/views/users.html
+++ b/views/users.html
@@ -5,7 +5,7 @@
         <label>User Name</label>
         <input name="name"/>
       </div>
-      <button>Create User</button>
+      <button class="btn btn-primary">Create User</button>
     </form>
     <ul>
     {% for user in users %}
