--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,15 @@
+
+
 {% extends './layout.html' %}
 {% block content %}
+  <ul class='nav nav-tabs' style='margin: 10px 0'>
+        <li class='nav-item'>
+          <a class='nav-link active' href='/'>Home</a>
+        </li>
+        <li class='nav-item'>
+          <a class='nav-link' href='/users'>Users</a>
+        </li>
+      </ul>
 Home Page Text
 {% endblock %}
 
