--- a/views/users.html
+++ b/views/users.html
@@ -1,5 +1,13 @@
 {% extends './layout.html' %}
 {% block content %}
+  <ul class='nav nav-tabs' style='margin: 10px 0'>
+        <li class='nav-item'>
+          <a class='nav-link' href='/'>Home</a>
+        </li>
+        <li class='nav-item'>
+          <a class='nav-link active' href='/users'>Users</a>
+        </li>
+      </ul>
    <form action='/users' method='POST'>
       <div>
         <label>User Name</label>
